--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>BDG - Business Development Group | Authorized VEICHI Distributor</title>
     <meta name="description"
         content="Authorized VEICHI distributor providing industrial automation solutions, frequency inverters, servo drives, and motion control systems.">
-    <link rel="stylesheet" href="/CSS/all.min.css">
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/all.min.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="/Images/Logo.jpg">
 </head>
@@ -47,10 +47,10 @@
                                 <li><a href="#hmi">HMI Panels</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="/HTML/solutions.html" class="nav-link">Solutions</a></li>
-                        <li class="nav-item"><a href="/HTML/support.html" class="nav-link">Support</a></li>
-                        <li class="nav-item"><a href="/HTML/about.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="/HTML/contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="HTML/solutions.html" class="nav-link">Solutions</a></li>
+                        <li class="nav-item"><a href="HTML/support.html" class="nav-link">Support</a></li>
+                        <li class="nav-item"><a href="HTML/about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="HTML/contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle" id="nav-toggle">
@@ -72,8 +72,8 @@
                     drives, PLC systems, and industrial automation solutions. Serving industries with cutting-edge
                     technology and exceptional support.</p>
                 <div class="hero-buttons">
-                    <a href="/HTML/products.html" class="btn btn-primary">Explore Products</a>
-                    <a href="/HTML/contact.html" class="btn btn-secondary">Get Quote</a>
+                    <a href="HTML/products.html" class="btn btn-primary">Explore Products</a>
+                    <a href="HTML/contact.html" class="btn btn-secondary">Get Quote</a>
                 </div>
             </div>
             <div class="hero-image">
