--- a/HTML/about.html
+++ b/HTML/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="/Images/Logo.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo.jpg">
 </head>
 
 <body>
@@ -696,3 +696,4 @@
 
 
 </html>
+
