--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About BDG - VEICHI Authorized Distributor</title>
-    <link rel="stylesheet" href="CSS/all.min.css">
+    <link rel="stylesheet" href="../CSS/all.min.css">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -696,4 +696,5 @@
 
 
 </html>
+
 
