--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,7 +7,7 @@
     <title>About BDG - VEICHI Authorized Distributor</title>
     <link rel="stylesheet" href="../CSS/all.min.css">
     <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="../CSS/normalize.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo.jpg">
 </head>
@@ -27,7 +27,7 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="/" class="nav-logo-link">
-                        <img src="Images/Logo.jpg" alt="VEICHI Distributor Logo" style="display: block;">
+                        <img src="../Images/Logo.jpg" alt="VEICHI Distributor Logo" style="display: block;">
                         <p class="logo-name" style="margin-top: 8px; text-align: left;">Business Development Group
                         </p>
                     </a>
@@ -38,10 +38,10 @@
                         <li class="nav-item dropdown">
                             <a href="/HTML/products.html" class="nav-link">Products</a>
                         </li>
-                        <li class="nav-item"><a href="HTML/solutions.html" class="nav-link">Solutions</a></li>
-                        <li class="nav-item"><a href="HTML/support.html" class="nav-link">Support</a></li>
-                        <li class="nav-item"><a href="HTML/about.html" class="nav-link active">About</a></li>
-                        <li class="nav-item"><a href="HTML/contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="../HTML/solutions.html" class="nav-link">Solutions</a></li>
+                        <li class="nav-item"><a href="../HTML/support.html" class="nav-link">Support</a></li>
+                        <li class="nav-item"><a href="../HTML/about.html" class="nav-link active">About</a></li>
+                        <li class="nav-item"><a href="../HTML/contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle" id="nav-toggle">
@@ -696,6 +696,7 @@
 
 
 </html>
+
 
 
 
