--- a/HTML/about.html
+++ b/HTML/about.html
@@ -140,7 +140,7 @@
                     </div>
                     <div class="image-content">
                         <div class="veichi-showcase">
-                            <img src="Images/veichi.jpg" alt="VEICHI Solar Water Pump System" class="showcase-image">
+                            <img src="../Images/veichi.jpg" alt="VEICHI Solar Water Pump System" class="showcase-image">
                             <div class="showcase-overlay">
                             </div>
                         </div>
@@ -548,7 +548,7 @@
                     <div class="footer-logo">
                         <div class="logo-container">
                             <div class="logo-icon">
-                                <img src="/Images/Logo.jpg" alt="">
+                                <img src="../Images/Logo.jpg" alt="">
                             </div>
                             <div class="logo-text">
                                 <h3>Business Development Group</h3>
@@ -589,10 +589,10 @@
                 <div class="footer-section">
                     <h3>Company</h3>
                     <ul class="footer-links">
-                        <li><a href="/HTML/about.html">About BDG</a></li>
-                        <li><a href="/HTML/solutions.html">Our Solutions</a></li>
-                        <li><a href="/HTML/support.html">Technical Support</a></li>
-                        <li><a href="/HTML/contact.html">Contact Us</a></li>
+                        <li><a href="../HTML/about.html">About BDG</a></li>
+                        <li><a href="../HTML/solutions.html">Our Solutions</a></li>
+                        <li><a href="../HTML/support.html">Technical Support</a></li>
+                        <li><a href="../HTML/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -600,11 +600,11 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="HTML/solutions.html">Industrial Automation</a></li>
-                        <li><a href="HTML/solutions.html">Expert Consultation</a></li>
-                        <li><a href="HTML/solutions.html">Installation & Setup</a></li>
-                        <li><a href="HTML/solutions.html">Training Programs</a></li>
-                        <li><a href="HTML/solutions.html">Maintenance Support</a></li>
+                        <li><a href="../HTML/solutions.html">Industrial Automation</a></li>
+                        <li><a href="../HTML/solutions.html">Expert Consultation</a></li>
+                        <li><a href="../HTML/solutions.html">Installation & Setup</a></li>
+                        <li><a href="../HTML/solutions.html">Training Programs</a></li>
+                        <li><a href="../HTML/solutions.html">Maintenance Support</a></li>
                     </ul>
                 </div>
 
@@ -689,13 +689,14 @@
             </div>
         </div>
     </footer>
-    <script src="JS/about.js"></script>
-    <script src="JS/go-up.js"></script>
-    <script src="JS/footer.js"></script>
+    <script src="../JS/about.js"></script>
+    <script src="../JS/go-up.js"></script>
+    <script src="../JS/footer.js"></script>
 </body>
 
 
 </html>
+
 
 
 
