--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact BDG - Get in Touch</title>
-    <link rel="stylesheet" href="CSS/all.min.css">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="../CSS/all.min.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/normalize.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="/Images/Logo.jpg">
+    <link rel="icon" type="../image/png" sizes="32x32" href="../Images/Logo.jpg">
 </head>
 
 <body>
@@ -38,10 +38,10 @@
                         <li class="nav-item dropdown">
                             <a href="HTML/products.html" class="nav-link">Products</a>
                         </li>
-                        <li class="nav-item"><a href="HTML/solutions.html" class="nav-link">Solutions</a></li>
-                        <li class="nav-item"><a href="HTML/support.html" class="nav-link">Support</a></li>
-                        <li class="nav-item"><a href="HTML/about.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="HTML/contact.html" class="nav-link active">Contact</a></li>
+                        <li class="nav-item"><a href="../HTML/solutions.html" class="nav-link">Solutions</a></li>
+                        <li class="nav-item"><a href="../HTML/support.html" class="nav-link">Support</a></li>
+                        <li class="nav-item"><a href="../HTML/about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="../HTML/contact.html" class="nav-link active">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle" id="nav-toggle">
@@ -452,10 +452,10 @@
                 <div class="footer-section">
                     <h3>Company</h3>
                     <ul class="footer-links">
-                        <li><a href="HTML/about.html">About BDG</a></li>
-                        <li><a href="HTML/solutions.html">Our Solutions</a></li>
-                        <li><a href="HTML/support.html">Technical Support</a></li>
-                        <li><a href="HTML/contact.html">Contact Us</a></li>
+                        <li><a href="../HTML/about.html">About BDG</a></li>
+                        <li><a href="../HTML/solutions.html">Our Solutions</a></li>
+                        <li><a href="../HTML/support.html">Technical Support</a></li>
+                        <li><a href="../HTML/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -463,11 +463,11 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="HTML/solutions.html">Industrial Automation</a></li>
-                        <li><a href="HTML/solutions.html">Expert Consultation</a></li>
-                        <li><a href="HTML/solutions.html">Installation & Setup</a></li>
-                        <li><a href="HTML/solutions.html">Training Programs</a></li>
-                        <li><a href="HTML/solutions.html">Maintenance Support</a></li>
+                        <li><a href="../HTML/solutions.html">Industrial Automation</a></li>
+                        <li><a href="../HTML/solutions.html">Expert Consultation</a></li>
+                        <li><a href="../HTML/solutions.html">Installation & Setup</a></li>
+                        <li><a href="../HTML/solutions.html">Training Programs</a></li>
+                        <li><a href="../HTML/solutions.html">Maintenance Support</a></li>
                     </ul>
                 </div>
 
@@ -553,10 +553,11 @@
         </div>
     </footer>
 
-    <script src="JS/contact.js"></script>
-    <script src="JS/go-up.js"></script>
-    <script src="JS/footer.js"></script>
+    <script src="../JS/contact.js"></script>
+    <script src="../JS/go-up.js"></script>
+    <script src="../JS/footer.js"></script>
 </body>
 
 
 </html>
+
