--- a/HTML/about.html
+++ b/HTML/about.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                         <li class="nav-item dropdown">
                             <a href="/HTML/products.html" class="nav-link">Products</a>
                         </li>
@@ -696,6 +696,7 @@
 
 
 </html>
+
 
 
 
