--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="footer-logo">
                         <div class="logo-container">
                             <div class="logo-icon">
-                                <img src="../Images/Logo.jpg" alt="">
+                                <img src="Images/Logo.jpg" alt="BDG">
                             </div>
                             <div class="logo-text">
                                 <h3>Business Development Group</h3>
