--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -34,9 +34,9 @@
                 </div>
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
                         <li class="nav-item dropdown">
-                            <a href="HTML/products.html" class="nav-link">Products</a>
+                            <a href="../HTML/products.html" class="nav-link">Products</a>
                         </li>
                         <li class="nav-item"><a href="../HTML/solutions.html" class="nav-link">Solutions</a></li>
                         <li class="nav-item"><a href="../HTML/support.html" class="nav-link">Support</a></li>
@@ -560,4 +560,5 @@
 
 
 </html>
+
 
