--- a/HTML/support.html
+++ b/HTML/support.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
                         <li class="nav-item dropdown">
                             <a href="../HTML/products.html" class="nav-link">Products</a>
 
@@ -895,4 +895,5 @@
 
 
 </html>
+
 
