--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -27,7 +27,7 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="/" class="nav-logo-link">
-                        <img src="Images/Logo.jpg" alt="VEICHI Distributor Logo" style="display: block;">
+                        <img src="../Images/Logo.jpg" alt="VEICHI Distributor Logo" style="display: block;">
                         <p class="logo-name" style="margin-top: 8px; text-align: left;">Business Development Group
                         </p>
                     </a>
@@ -560,5 +560,6 @@
 
 
 </html>
+
 
 
